Replaced QuadTree with Hash Partitionning Added a way to visualize zones

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
         "lib/gjk.lua",
         "lib/polygon.lua",
         "lib/shapes.lua",
-        "lib/quadtree.lua",
+        "lib/spatialhash.lua",
         "server.lua"
     ],
     "client_scripts": [
+        "lib/json.lua",
         "client.lua"
     ],
     "files": []
